Deploy Nessie REST Catalog to Azure Container Apps

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,9 +1,12 @@
 # Backend Environment Variables
 # Copy this file to .env and fill in your values
 
-# Database
-DATABASE_URL=iceberg://nessie-endpoint/api/v2
-ICEBERG_CATALOG_URI=http://your-nessie-endpoint/api/v2
+# Database / Iceberg
+# For production (Azure): Use internal FQDN
+ICEBERG_CATALOG_URI=https://investflow-nessie.internal.yellowsky-ca466dfe.eastus.azurecontainerapps.io/api/v2
+# For local development: Use localhost or port-forwarded endpoint
+# ICEBERG_CATALOG_URI=http://localhost:19120/api/v2
+DATABASE_URL=iceberg://investflow-nessie.internal.yellowsky-ca466dfe.eastus.azurecontainerapps.io/api/v2
 
 # Azure Storage
 AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=...
