Add Iceberg catalog options comparison - support HadoopCatalog, JdbcCatalog, and REST catalog

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,12 +1,21 @@
 # Backend Environment Variables
 # Copy this file to .env and fill in your values
 
-# Database / Iceberg
-# For production (Azure): Use internal FQDN
-ICEBERG_CATALOG_URI=https://investflow-nessie.internal.yellowsky-ca466dfe.eastus.azurecontainerapps.io/api/v2
-# For local development: Use localhost or port-forwarded endpoint
-# ICEBERG_CATALOG_URI=http://localhost:19120/api/v2
-DATABASE_URL=iceberg://investflow-nessie.internal.yellowsky-ca466dfe.eastus.azurecontainerapps.io/api/v2
+# Database / Iceberg Catalog Configuration
+# Choose catalog type: "hadoop" (cheapest, file-based), "jdbc" (direct DB), "rest" (Nessie), "hive"
+ICEBERG_CATALOG_TYPE=hadoop
+
+# Option 1: HadoopCatalog (RECOMMENDED - $0 cost, uses blob storage directly)
+# Format: abfss://container@storageaccount.dfs.core.windows.net/path
+# Or: wasbs://container@storageaccount.blob.core.windows.net/path
+DATABASE_URL=abfss://documents@investflowstorage.dfs.core.windows.net/iceberg-warehouse
+
+# Option 2: JdbcCatalog (uses PostgreSQL container - already running)
+# DATABASE_URL=jdbc:postgresql://investflow-postgres.internal.yellowsky-ca466dfe.eastus.azurecontainerapps.io:5432/nessie
+
+# Option 3: REST Catalog (Nessie) - requires ICEBERG_CATALOG_URI
+# ICEBERG_CATALOG_URI=https://investflow-nessie.internal.yellowsky-ca466dfe.eastus.azurecontainerapps.io/api/v2
+# DATABASE_URL=abfss://documents@investflowstorage.dfs.core.windows.net/iceberg-warehouse
 
 # Azure Storage
 AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=...
