--- a/backend/env.example
+++ b/backend/env.example
@@ -1,37 +1,76 @@
-# Backend Environment Variables
-# Copy this file to .env and fill in your values
+# Application
+APP_NAME=InvestFlow API
+APP_VERSION=0.1.0
+ENVIRONMENT=development
+DEBUG=false
 
-# Database / Iceberg Catalog Configuration
-# Choose catalog type: "hadoop" (cheapest, file-based), "jdbc" (direct DB), "rest" (Nessie), "hive"
-ICEBERG_CATALOG_TYPE=hadoop
+# API
+API_V1_PREFIX=/api/v1
 
-# Option 1: HadoopCatalog (RECOMMENDED - $0 cost, uses blob storage directly)
-# Format: abfss://container@storageaccount.dfs.core.windows.net/path
-# Or: wasbs://container@storageaccount.blob.core.windows.net/path
-DATABASE_URL=abfss://documents@investflowstorage.dfs.core.windows.net/iceberg-warehouse
-
-# Option 2: JdbcCatalog (uses PostgreSQL container - already running)
-# DATABASE_URL=jdbc:postgresql://investflow-postgres.internal.yellowsky-ca466dfe.eastus.azurecontainerapps.io:5432/nessie
-
-# Option 3: REST Catalog (Nessie) - requires ICEBERG_CATALOG_URI
-# ICEBERG_CATALOG_URI=https://investflow-nessie.internal.yellowsky-ca466dfe.eastus.azurecontainerapps.io/api/v2
-# DATABASE_URL=abfss://documents@investflowstorage.dfs.core.windows.net/iceberg-warehouse
-
-# Azure Storage
-AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=...
-AZURE_STORAGE_CONTAINER_NAME=documents
-
-# Authentication
-SECRET_KEY=your-secret-key-here-change-in-production
+# Security
+SECRET_KEY=dev-secret-key-change-in-production-min-32-chars-long
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # CORS
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+CORS_ORIGINS=http://localhost:3000
 
-# Environment
-ENVIRONMENT=development
+# Azure PostgreSQL Configuration
+POSTGRES_HOST=if-postgres.postgres.database.azure.com
+POSTGRES_PORT=5432
+POSTGRES_DB=investflow
+POSTGRES_USER=pgadmin
+POSTGRES_PASSWORD=your_password_here
 
-# Application Insights (optional)
-APPLICATIONINSIGHTS_CONNECTION_STRING=InstrumentationKey=...
+# Azure ADLS Gen2 Configuration
+AZURE_STORAGE_ACCOUNT_NAME=investflowadls
+AZURE_STORAGE_ACCOUNT_KEY=
+AZURE_STORAGE_CONTAINER_NAME=documents
 
+# Azure Key Vault
+AZURE_KEY_VAULT_NAME=investflow-kv
+
+# Application Insights
+APPLICATIONINSIGHTS_CONNECTION_STRING=
+
+# Lakekeeper Configuration
+# Uses the SAME PostgreSQL database as the backend (constructed from POSTGRES_* variables above)
+# These will be automatically constructed in docker-compose.yml from POSTGRES_* variables
+# If you need to override, uncomment and set manually:
+# LAKEKEEPER__PG_DATABASE_URL_READ=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+# LAKEKEEPER__PG_DATABASE_URL_WRITE=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+
+# Encryption key for sensitive data (generate a strong random key)
+# This should be a secure, random string (at least 32 characters)
+LAKEKEEPER__PG_ENCRYPTION_KEY=your-secret-encryption-key-min-32-chars
+
+# Base URI for Lakekeeper
+LAKEKEEPER__BASE_URI=http://localhost:8181
+
+# Default warehouse name (used by backend to identify which warehouse to use)
+LAKEKEEPER__WAREHOUSE_NAME=lakekeeper
+
+# Azure System Credentials (set to true to use Azure Managed Identity)
+LAKEKEEPER__ENABLE_AZURE_SYSTEM_CREDENTIALS=false
+
+# Optional: OAuth2 token for Lakekeeper API authentication (static token - deprecated, use OAuth2 service instead)
+# LAKEKEEPER__AUTH_TOKEN=your-oauth2-token-here
+
+# OAuth2/OIDC Configuration for Lakekeeper (Azure AD)
+# See lakekeeper/OAUTH2_SETUP.md for complete setup instructions
+# 
+# Lakekeeper OAuth2 Configuration (for validating incoming tokens)
+LAKEKEEPER__OPENID_PROVIDER_URI=https://login.microsoftonline.com/{TENANT_ID}/v2.0/.well-known/openid-configuration
+LAKEKEEPER__OPENID_AUDIENCE=api://lakekeeper
+# LAKEKEEPER__OPENID_ADDITIONAL_ISSUERS=  # Optional: additional issuers
+# 
+# Lakekeeper UI OAuth2 Configuration (for user login)
+# LAKEKEEPER__UI__OPENID_CLIENT_ID=your-ui-client-id
+# LAKEKEEPER__UI__OPENID_SCOPE=openid profile email lakekeeper
+#
+# Backend OAuth2 Configuration (for service account authentication)
+LAKEKEEPER__OAUTH2__CLIENT_ID=your-backend-client-id
+LAKEKEEPER__OAUTH2__CLIENT_SECRET=your-backend-client-secret
+LAKEKEEPER__OAUTH2__TENANT_ID=your-azure-ad-tenant-id
+LAKEKEEPER__OAUTH2__SCOPE=api://lakekeeper/.default
+# LAKEKEEPER__OAUTH2__AUTHORITY=https://login.microsoftonline.com/{TENANT_ID}  # Auto-constructed if not set
