--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
+    "email-validator>=2.0.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "python-multipart>=0.0.6",
@@ -15,12 +16,16 @@ dependencies = [
     "azure-keyvault-secrets>=4.7.0",
     "azure-identity>=1.15.0",
     "opencensus-ext-azure>=1.1.11",
-    "pyiceberg>=0.6.0",
     "sqlalchemy>=2.0.0",
     "alembic>=1.12.0",
+    "psycopg2-binary>=2.9.9",
+    "asyncpg>=0.29.0",
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.0",
     "httpx>=0.25.0",
+    "pandas>=2.0.0",
+    "pyarrow>=14.0.0",
+    "pyiceberg[adlfs]>=0.6.0",
 ]
 
 [project.optional-dependencies]
@@ -34,6 +39,9 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
 
 [tool.ruff]
 line-length = 100
