--- a/backend/warehouse.json.example
+++ b/backend/warehouse.json.example
@@ -4,10 +4,10 @@
     "type": "hard"
   },
   "storage-credential": {
-    "client-id": "18736a7b-2076-4261-9ae2-6d79f40f3357",
-    "client-secret": "-S_8Q~NZfv3_xh7n2eqaKbvns_HKpEecnO2ZOauA",
+    "client-id": "YOUR_CLIENT_ID_HERE",
+    "client-secret": "YOUR_CLIENT_SECRET_HERE",
     "credential-type": "client-credentials",
-    "tenant-id": "479bc30b-030f-4a2e-8ea2-67f549b32f5e",
+    "tenant-id": "YOUR_TENANT_ID_HERE",
     "type": "az"
   },
   "storage-profile": {
@@ -16,3 +16,4 @@
     "type": "adls"
   }
 }
+
