--- a/frontend/env.example
+++ b/frontend/env.example
@@ -5,5 +5,5 @@
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # Azure Storage (for direct image access if needed)
-NEXT_PUBLIC_AZURE_STORAGE_URL=https://investflowstorage.blob.core.windows.net
+NEXT_PUBLIC_AZURE_STORAGE_URL=https://investflowadls.blob.core.windows.net
 
