--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,8 +24,9 @@ dependencies = [
     "pytest-asyncio>=0.21.0",
     "httpx>=0.25.0",
     "pandas>=2.0.0",
-    "pyarrow>=14.0.0",
+    "pyarrow>=16.0.0",
     "pyiceberg[adlfs]>=0.6.0",
+    "cython>=3.0.0",
 ]
 
 [project.optional-dependencies]
