--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -7,8 +7,9 @@ on:
     branches: [main, develop]
 
 jobs:
-  backend-lint:
-    name: Backend Linting
+  # Backend checks
+  backend-checks:
+    name: Backend Checks
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -21,53 +22,23 @@ jobs:
         with:
           python-version: '3.11'
       
-      - name: Install UV
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
       
       - name: Install dependencies
-        run: |
-          source $HOME/.cargo/env
-          uv pip install ruff black mypy
+        run: uv sync --dev
       
-      - name: Run Ruff
-        run: |
-          source $HOME/.cargo/env
-          uv run ruff check app/
+      - name: Run Ruff linter
+        run: uv run ruff check app/
+        continue-on-error: true
       
-      - name: Run Black check
-        run: |
-          source $HOME/.cargo/env
-          uv run black --check app/
+      - name: Run Ruff formatter check
+        run: uv run ruff format --check app/
+        continue-on-error: true
 
-  backend-test:
-    name: Backend Tests
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      
-      - name: Install UV
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-      
-      - name: Install dependencies
-        run: |
-          source $HOME/.cargo/env
-          uv pip install -e .
-      
-      - name: Run tests
-        run: |
-          source $HOME/.cargo/env
-          uv run pytest tests/ -v
-
-  frontend-lint:
-    name: Frontend Linting
+  # Frontend checks
+  frontend-checks:
+    name: Frontend Checks
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -87,55 +58,38 @@ jobs:
       
       - name: Run ESLint
         run: npm run lint
+        continue-on-error: true
       
-      - name: Run Prettier check
-        run: npx prettier --check .
+      - name: Type check
+        run: npx tsc --noEmit
+        continue-on-error: true
 
-  frontend-build:
-    name: Frontend Build
+  # Build checks (verify Docker builds work)
+  docker-build-check:
+    name: Docker Build Check
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend
     steps:
       - uses: actions/checkout@v4
       
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build backend image
+        uses: docker/build-push-action@v5
         with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          context: ./backend
+          platforms: linux/amd64
+          push: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Build
-        run: npm run build
-        env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL || 'http://localhost:8000' }}
-
-  docker-build:
-    name: Docker Build
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Log in to Azure Container Registry
-        uses: azure/docker-login@v1
+      - name: Build frontend image
+        uses: docker/build-push-action@v5
         with:
-          login-server: investflowregistry.azurecr.io
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-      
-      - name: Build and push backend image
-        run: |
-          docker build -t investflowregistry.azurecr.io/investflow-backend:latest ./backend
-          docker push investflowregistry.azurecr.io/investflow-backend:latest
-      
-      - name: Build and push frontend image
-        run: |
-          docker build -t investflowregistry.azurecr.io/investflow-frontend:latest ./frontend
-          docker push investflowregistry.azurecr.io/investflow-frontend:latest
-
+          context: ./frontend
+          platforms: linux/amd64
+          push: false
+          build-args: |
+            NEXT_PUBLIC_API_URL=http://localhost:8000
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
