--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,8 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
       
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v2
@@ -106,6 +108,8 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
       
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v2
