--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,25 +71,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver: docker-container
-      
       - name: Build backend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          platforms: linux/amd64
-          push: false
-          provenance: false
+        run: docker build --platform linux/amd64 -t test-backend ./backend
       
       - name: Build frontend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          platforms: linux/amd64
-          push: false
-          build-args: |
-            NEXT_PUBLIC_API_URL=http://localhost:8000
-          provenance: false
+        run: |
+          docker build --platform linux/amd64 \
+            --build-arg NEXT_PUBLIC_API_URL=http://localhost:8000 \
+            -t test-frontend ./frontend
