Add fast ADLS parquet cache for financial performance
Major changes:
- Create financial_performance_cache_service.py for ADLS parquet caching
- Cache stores P&L data (rent - expenses) as parquet in Azure Blob Storage
- Fast O(1) lookups from in-memory cache loaded from ADLS on startup
- Async/non-blocking cache updates when expenses or rent are added
- Migration script to populate cache from historical data
- Update TypeScript types to include expense breakdown fields
- Update invalidate_cache calls to pass user_id for recalculation

This ensures financial performance queries are FAST and don't slow down
the expense/rent screens. Cache is updated in parallel background threads.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -31,6 +31,8 @@ COPY app/ ./app/
 
 # Copy migration scripts
 COPY migrate_user_cache.py ./
+COPY migrate_financial_performance.py ./
+COPY migrate_populate_financial_performance_cache.py ./
 
 # Expose port
 EXPOSE 8000
