Fix financial performance API error and simplify Set Rent analysis
Bug Fixes:
- Fixed 500 error in financial performance API caused by incorrect tuple unpacking
- list_expenses returns (items, count) tuple, not dict with 'items' key

Set Rent Analysis Improvements:
- Simplified blue highlight to show current monthly rent from property
- Removed Affordability % and Market % columns
- Removed complex optimal rent calculation logic
- Consolidated Input Parameters and Financial Summary into single section
- Added Rentometer.com link for market comparison
- Fixed rent range defaults to use property's current_monthly_rent ± $400

Documentation:
- Added DATA_RECOVERY_SUMMARY.md documenting backup/recovery procedures
- Added SCHEDULED_FINANCIALS_AUTO_ADD.md explaining auto-scaling system
- Added SCHEDULED_FINANCIALS_TEMPLATE_STORAGE.md documenting ADLS templates
- Updated README.md with latest architecture details
- Cleaned up temporary recovery scripts and unused files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,9 +30,9 @@ RUN uv pip install --system --no-binary pyiceberg -e .
 COPY app/ ./app/
 
 # Copy migration scripts
-COPY migrate_user_cache.py ./
-COPY migrate_financial_performance.py ./
-COPY migrate_populate_financial_performance_cache.py ./
+#COPY migrate_user_cache.py ./
+#COPY migrate_financial_performance.py ./
+#COPY migrate_populate_financial_performance_cache.py ./
 
 # Expose port
 EXPOSE 8000
