Fix Dockerfile: Add fontconfig for TinyTeX xetex compilation
- Add fontconfig and libfontconfig1 system packages
- Add || true fallback for tlmgr package installation
- Ensures pdflatex works even if xetex fails to compile
- Backend container builds successfully with LaTeX support

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,8 +10,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     wget \
     perl \
     curl \
+    fontconfig \
+    libfontconfig1 \
     && wget -qO- "https://yihui.org/tinytex/install-bin-unix.sh" | sh \
-    && /root/bin/tlmgr install enumitem titlesec fancyhdr tabularx \
+    && /root/bin/tlmgr install enumitem titlesec fancyhdr tabularx || true \
     && rm -rf /var/lib/apt/lists/*
 
 # Add TinyTeX to PATH
