Lease generation enhancements: logo, maintenance responsibilities, parking, holding fee addendum
Major updates:
- Added S&M Axios Heartland Holdings LLC logo to lease and holding fee PDF headers
- Simplified maintenance responsibility checkboxes (teal circle badge for responsible party)
- Enhanced parking clause with professional legal language and no-blocking rules
- Fixed premises address formatting for multi-unit properties
- Added zip code to property addresses
- Improved rent due date clarification and late fee escalation
- TurboTenant payment method integration with fallback to check
- NSF fee clarification (only applies to checks)
- Lead paint disclosure integration
- Holding fee addendum as separate document
- Document dropdown menu for multiple document types
- Automatic month-to-month conversion language in Section 2
- Various LaTeX/PDF generation improvements

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,12 +12,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     fontconfig \
     libfontconfig1 \
-    && wget -qO- "https://yihui.org/tinytex/install-bin-unix.sh" | sh \
-    && /root/bin/tlmgr install enumitem titlesec fancyhdr tabularx || true \
+    texlive-latex-base \
+    texlive-latex-extra \
+    texlive-fonts-recommended \
     && rm -rf /var/lib/apt/lists/*
-
-# Add TinyTeX to PATH
-ENV PATH="/root/bin:$PATH"
 
 # Install UV
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
