--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "generate-pdfs": "node scripts/generate-pdfs.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
@@ -47,6 +48,7 @@
     "postcss": "^8.4.0",
     "prettier": "^3.2.0",
     "prettier-plugin-tailwindcss": "^0.5.0",
+    "puppeteer": "^22.15.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0"
   }
